--- a/cau3.html
+++ b/cau3.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="canvas" ></canvas>
-<script src="rectangle.js"></script>
+<script>
+
+</script>
+
 </body>
 </html>
